[project]
name = "telecom-initiative-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.12.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.7",
    "memory-profiler>=0.61.0",
    "numpy>=1.20.0",
    "pandas>=1.4.0",
    "plotly>=5.10.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "streamlit>=1.20.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
]
